package domain.entities.person;

import domain.entities.EntityId;

public class PersonId extends EntityId{

    public PersonId(int id) {
        super(id);
    }
    
}